--- a/Introduction.html
+++ b/Introduction.html
@@ -62,7 +62,7 @@
 		
 <p></p>
 <h1 class="rvps5"><span class="rvts0"><span class="rvts12">Introduction</span></span></h1>
-<p class="rvps2"><span class="rvts15">xsdOut</span><span class="rvts6"> version </span><span class="rvts6">0.7.5.0</span><span class="rvts6"> is a command line tool for converting XSD to </span><a class="rvts14" href="https://autohotkey.com/" target="_blank">AutoHotkey</a><span class="rvts6"> format or to C# format.</span></p>
+<p class="rvps2"><span class="rvts15">xsdOut</span><span class="rvts6"> version </span><span class="rvts6">0.7.5.0</span><span class="rvts6"> is a Windows command line tool for converting XSD to </span><a class="rvts14" href="https://autohotkey.com/" target="_blank">AutoHotkey</a><span class="rvts6"> format or to C# format.</span></p>
 <p class="rvps2"><span class="rvts6">Link to </span><span class="rvts15">xsdOut</span><span class="rvts6"> </span><a class="rvts16" href="https://github.com/Amourspirit/XSD-to-AutoHotkey-or-CS" target="_blank">Homepage</a><span class="rvts6">.</span></p>
 <p class="rvps2"><span class="rvts6">If converting to AutoHotkey format then </span><a class="rvts16" href="https://github.com/Amourspirit/Mini-Framework" target="_blank">Mini-Framework for AutoHotkey</a><span class="rvts6"> is required.</span></p>
 <p class="rvps2"><span class="rvts6">The program is distributed under the terms of the GNU General Public License version 3 or later. See </span><a class="rvts13" href="License.html">License</a></p>
